# curry

./: Cargo.toml  README.md
src/: curry3.rs  curry4.rs  curry5.rs  fns_macros.rs  lib.rs  uncurry.rs
src/curry/: curry2.rs  curry3.rs  curry4.rs  curry5.rs  curry6.rs
